Revert "To v container"

--- a/StateMachine.asmdef
+++ b/StateMachine.asmdef
@@ -5,8 +5,7 @@
         "UniRx.Async",
         "UniRx",
         "Zenject",
-        "UniTask",
-        "VContainer"
+        "UniTask"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
