--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "space.mkim.statemachine",
-    "displayName": "StateMachine",
-    "version": "0.0.1",
-    "unity": "2018.3"
+  "name": "io.github.piti6.misokatsu.framework",
+  "displayName": "Misokatsu.Framework",
+  "version": "0.0.1",
+  "unity": "2018.3"
 }
